@@ -1,22 +1,20 @@
 package me.bsuir.easyattend.service;
 
-import me.bsuir.easyattend.repository.RegistrationStatusRepository;
+import java.time.LocalDateTime;
+import java.util.List;
 import me.bsuir.easyattend.dto.create.RegistrationStatusCreateDto;
 import me.bsuir.easyattend.dto.get.RegistrationStatusGetDto;
-import me.bsuir.easyattend.model.RegistrationStatus;
-import me.bsuir.easyattend.model.Event;
-import me.bsuir.easyattend.model.User;
 import me.bsuir.easyattend.exception.ResourceNotFoundException;
 import me.bsuir.easyattend.mapper.RegistrationStatusMapper;
+import me.bsuir.easyattend.model.Event;
+import me.bsuir.easyattend.model.RegistrationStatus;
+import me.bsuir.easyattend.model.User;
 import me.bsuir.easyattend.repository.EventRepository;
+import me.bsuir.easyattend.repository.RegistrationStatusRepository;
 import me.bsuir.easyattend.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class RegistrationStatusService {
@@ -27,7 +25,11 @@ public class RegistrationStatusService {
     private final UserRepository userRepository;
 
     @Autowired
-    public RegistrationStatusService(RegistrationStatusRepository registrationStatusRepository, RegistrationStatusMapper registrationStatusMapper, EventRepository eventRepository, UserRepository userRepository) {
+    public RegistrationStatusService(
+            RegistrationStatusRepository registrationStatusRepository,
+            RegistrationStatusMapper registrationStatusMapper,
+            EventRepository eventRepository,
+            UserRepository userRepository) {
         this.registrationStatusRepository = registrationStatusRepository;
         this.registrationStatusMapper = registrationStatusMapper;
         this.eventRepository = eventRepository;
@@ -36,8 +38,10 @@ public class RegistrationStatusService {
 
     @Transactional(readOnly = true)
     public RegistrationStatusGetDto getRegistrationStatusById(Long id) {
-        RegistrationStatus registrationStatus = registrationStatusRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("RegistrationStatus not found with id " + id));
+        RegistrationStatus registrationStatus
+                = registrationStatusRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException(
+                        "RegistrationStatus not found with id " + id));
         return registrationStatusMapper.toDto(registrationStatus);
     }
 
@@ -46,51 +50,85 @@ public class RegistrationStatusService {
         List<RegistrationStatus> registrationStatuses = registrationStatusRepository.findAll();
         return registrationStatuses.stream()
                 .map(registrationStatusMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
-    public RegistrationStatusGetDto createRegistrationStatus(RegistrationStatusCreateDto registrationStatusCreateDto) {
-        RegistrationStatus registrationStatus = registrationStatusMapper.toEntity(registrationStatusCreateDto);
+    public RegistrationStatusGetDto createRegistrationStatus(
+            RegistrationStatusCreateDto registrationStatusCreateDto
+    ) {
+        RegistrationStatus registrationStatus
+                = registrationStatusMapper.toEntity(registrationStatusCreateDto);
 
         Event event = eventRepository.findById(registrationStatusCreateDto.getEventId())
-                .orElseThrow(() -> new ResourceNotFoundException("Event not found with id " + registrationStatusCreateDto.getEventId()));
+                .orElseThrow(() ->
+                        new ResourceNotFoundException(
+                                "Event not found with id "
+                                        + registrationStatusCreateDto.getEventId()));
         User user = userRepository.findById(registrationStatusCreateDto.getUserId())
-                .orElseThrow(() -> new ResourceNotFoundException("User not found with id " + registrationStatusCreateDto.getUserId()));
+                .orElseThrow(() ->
+                        new ResourceNotFoundException(
+                                "User not found with id "
+                                        + registrationStatusCreateDto.getUserId()));
 
         registrationStatus.setEvent(event);
         registrationStatus.setUser(user);
         registrationStatus.setStatusDate(LocalDateTime.now());
 
-        RegistrationStatus savedRegistrationStatus = registrationStatusRepository.save(registrationStatus);
+        RegistrationStatus savedRegistrationStatus
+                = registrationStatusRepository
+                .save(registrationStatus);
         return registrationStatusMapper.toDto(savedRegistrationStatus);
     }
 
     @Transactional
-    public RegistrationStatusGetDto updateRegistrationStatus(Long id, RegistrationStatusCreateDto registrationStatusCreateDto) {
+    public RegistrationStatusGetDto updateRegistrationStatus(
+            Long id,
+            RegistrationStatusCreateDto registrationStatusCreateDto
+    ) {
         RegistrationStatus registrationStatus = registrationStatusRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("RegistrationStatus not found with id " + id));
+                .orElseThrow(()
+                        -> new ResourceNotFoundException(
+                                "RegistrationStatus not found with id "
+                                        + id)
+                );
 
         Event event = eventRepository.findById(registrationStatusCreateDto.getEventId())
-                .orElseThrow(() -> new ResourceNotFoundException("Event not found with id " + registrationStatusCreateDto.getEventId()));
+                .orElseThrow(()
+                        -> new ResourceNotFoundException(
+                                "Event not found with id "
+                                        + registrationStatusCreateDto.getEventId())
+                );
         User user = userRepository.findById(registrationStatusCreateDto.getUserId())
-                .orElseThrow(() -> new ResourceNotFoundException("User not found with id " + registrationStatusCreateDto.getUserId()));
+                .orElseThrow(()
+                        -> new ResourceNotFoundException(
+                                "User not found with id "
+                                        + registrationStatusCreateDto.getUserId())
+                );
 
         registrationStatus.setEvent(event);
         registrationStatus.setUser(user);
-        //registrationStatus.setStatus(registrationStatusCreateDto.getStatus()); //TODO ENUM
         registrationStatus.setStatusDate(LocalDateTime.now());
 
-        registrationStatusMapper.updateRegistrationStatusFromDto(registrationStatusCreateDto, registrationStatus);
+        registrationStatusMapper.updateRegistrationStatusFromDto(
+                registrationStatusCreateDto,
+                registrationStatus
+        );
 
-        RegistrationStatus updatedRegistrationStatus = registrationStatusRepository.save(registrationStatus);
+        RegistrationStatus updatedRegistrationStatus
+                = registrationStatusRepository
+                .save(registrationStatus);
         return registrationStatusMapper.toDto(updatedRegistrationStatus);
     }
 
     @Transactional
     public void deleteRegistrationStatus(Long id) {
         RegistrationStatus registrationStatus = registrationStatusRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("RegistrationStatus not found with id " + id));
+                .orElseThrow(()
+                        -> new ResourceNotFoundException(
+                                "RegistrationStatus not found with id "
+                                        + id)
+                );
         registrationStatusRepository.delete(registrationStatus);
     }
 }
